Finalizei o projeto optimustech para desktop

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h2 class="vagas-subtitulo">Vagas abertas!</h2>
         <h1 class="vagas-titulo">Estamos procurando por talentos</h1>
         <p class="vagas-texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-        <img src="assets/equipe-trabalhadores.png" alt="Imagem de trabalhadores da empresa">
+        <img class="vagas-img" src="assets/equipe-trabalhadores.png" alt="Imagem de trabalhadores da empresa">
 
         <ul class="vagas-design">
             <li class="design-profissao">
@@ -118,5 +118,30 @@
             </li>
         </ul>
     </section>
+
+    <!-- SEÇÃO DEPOIMENTOS -->
+
+    <section class="secao__depoimentos">
+        <div class="depoimentos__conteudo">
+            <h2 class="depoimentos__subtitulo">Veja o que nossos colaboradores falam sobre nós</h2>
+            <p class="depoimentos__texto">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+        </div>
+        <div class="depoimentos__perfil">
+            <img src="assets/avatar-footer.png" alt="Foto de perfil da desenvolvedora">
+            <p class="perfil-nome">Júlia Castro</p>
+            <span class="perfil-profissao">Desenvolvedora Web</span>
+        </div>
+    </section>
+
+    <!-- SEÇÃO FORMULÁRIO -->
+
+    <footer class="secao__formulario">
+        <h1 class="formulario__titulo">Acompanhe as nossas oportunidades</h1>
+        <p class="formulario__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <div class="formulario__input">
+            <input placeholder="Seu e-mail" type="email" class="formulario__email"> <input class="formulario__botao" type="button" value="Cadastrar">
+        </div>
+        <span class="formulario__copyright">© 2022 OptimusTech. Todos os direitos reservados.</span>
+    </footer>
 </body>
 </html>
